[fix] Image stretch

--- a/src/app/plant-overview/plant-overview.component.scss
+++ b/src/app/plant-overview/plant-overview.component.scss
@@ -143,11 +143,6 @@ a:hover {
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
 
-  .card-container > *:not(.circle-link) ,
-  .terminal {
-    width: 100%;
-  }
-
   .card:not(.highlight-card) {
     height: 200px;
     margin: 8px 0;
